dcz-94: Fix missing padding for small screen main.

--- a/docroot/themes/custom/dcz_theme/assets/sass/pages/_page_layout.scss
+++ b/docroot/themes/custom/dcz_theme/assets/sass/pages/_page_layout.scss
@@ -3,4 +3,5 @@
 .main-container {
   margin: 0 auto;
   max-width: $max-width;
+  padding: 0 $site-padding;
 }
