--- a/docroot/themes/custom/dcz_theme/css/style.css
+++ b/docroot/themes/custom/dcz_theme/css/style.css
@@ -341,6 +341,7 @@ tbody td {
 
 .main-container {
   margin: 0 auto;
-  max-width: 120rem; }
+  max-width: 120rem;
+  padding: 0 2rem; }
 
 /*# sourceMappingURL=style.css.map */
